--- a/project-ml-microservice-kubernetes/Makefile
+++ b/project-ml-microservice-kubernetes/Makefile
@@ -5,10 +5,13 @@
 # app.py should pass pylint
 # (Optional) Build a simple integration test
 
+
+
 setup:
 	# Create python virtualenv & source it
 	# source ~/.devops/bin/activate
 	python3 -m venv ~/.devops
+	source ~/.devops/bin/activate
 
 install:
 	# This should be run from inside a virtualenv
@@ -17,8 +20,9 @@ install:
 
 test:
 	# Additional, optional, tests could go here
-	#python -m pytest -vv --cov=myrepolib tests/*.py
-	#python -m pytest --nbval notebook.ipynb
+	python -m pytest -vv --cov=myrepolib tests/*.py
+	python -m pytest --nbval notebook.ipynb
+
 
 lint:
 	# See local hadolint install instructions:   https://github.com/hadolint/hadolint
@@ -28,4 +32,4 @@ lint:
 	# This should be run from inside a virtualenv
 	pylint --disable=R,C,W1203 app.py
 
-all: install lint test
+all: setup install lint test
